--- a/app/src/main/res/layout/layout_adx_native_ad.xml
+++ b/app/src/main/res/layout/layout_adx_native_ad.xml
@@ -37,7 +37,7 @@
                 android:layout_marginRight="5dp"
                 android:gravity="center"
                 android:maxLines="1"
-                android:text="Sponsored"
+                android:text="Ad"
                 android:textColor="#FFFFFF"
                 android:textSize="10dp" />
 
