--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -79,5 +79,15 @@
             android:layout_alignParentTop="true"
             android:layout_marginTop="10dp"
             android:text="Rewarded Ad Example" />
+
+        <Button
+            android:id="@+id/btn_news_banner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="10dp"
+            android:text="News Banner Ad Example" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
