--- a/app/src/main/res/layout/activity_banner.xml
+++ b/app/src/main/res/layout/activity_banner.xml
@@ -12,8 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:gravity="bottom|center_horizontal"
-        android:background="#018786">
+        android:gravity="bottom|center_horizontal">
 
         <com.adxcorp.ads.BannerAd
             android:id="@+id/banner"
