--- a/app/src/main/res/layout/activity_native_ad_factory.xml
+++ b/app/src/main/res/layout/activity_native_ad_factory.xml
@@ -1,17 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/bg_main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#eeeeee"
-    tools:showIn="@layout/activity_main">
+    android:layout_height="match_parent">
     <LinearLayout
         android:id="@+id/content_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#ffffff"
         android:gravity="center"
         android:orientation="vertical">
     </LinearLayout>>
