--- a/app/src/main/res/layout/activity_native_ad_recyclerview.xml
+++ b/app/src/main/res/layout/activity_native_ad_recyclerview.xml
@@ -3,9 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/content_main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#eeeeee"
-    tools:showIn="@layout/activity_main">
+    android:layout_height="match_parent">
     <androidx.recyclerview.widget.RecyclerView
         android:layout_marginTop="30dp"
         android:id="@+id/native_recycler_view"
