--- a/app/src/main/res/layout/activity_news_banner.xml
+++ b/app/src/main/res/layout/activity_news_banner.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cl_news_banner"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BannerActivity">
+    tools:context=".NewsBannerActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:gravity="bottom|center_horizontal"
-        android:background="#018786">
+        android:gravity="bottom|center_horizontal">
 
         <LinearLayout
             android:id="@+id/ad_container"
